istio-gateway/global-api-gateway/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: global-kic
---
apiVersion: v1
kind: Namespace
metadata:
  name: global-api-gateway-ns
