istio-gateway/global-api-gateway/01-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: global-kong-gatewayclass
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  # This must match the Gateway API controller name used by the Kong controller.
  controllerName: konghq.com/global-kong-gateway-controller
