istio-gateway/global-api-gateway/03-global-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-httproute
  namespace: global-api-gateway-ns
spec:
  # Connect this HTTPRoute to the Kong Gateway in 02-global-gateway.yaml.
  parentRefs:
  - name: global-kong-globalgateway
    namespace: global-kic
  hostnames:
  - finance.hellocloud.io
  rules:
  # Public URL: /retail-banking/customer-profile-svc
  # Kong sends it to the retail-banking Istio ingress gateway as: /accounts
  - matches:
    - path:
        type: PathPrefix
        value: /retail-banking/customer-profile-svc
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /accounts
    # This backend Service is created by istio-gateway/minimal-profile.yaml.
    backendRefs:
    - name: retail-banking-istio-ingressgateway
      namespace: retail-banking-ingress    # IngressGateway now in its own namespace
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /payments/transactions
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /transactions
    backendRefs:
    - name: payments-istio-ingressgateway
      namespace: payments-ingress          # IngressGateway now in its own namespace
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /grc/audits
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /audits
    backendRefs:
    - name: grc-istio-ingressgateway
      namespace: grc-ingress               # IngressGateway now in its own namespace
      port: 80
